<resources>
    <string name="app_name">Onstagram</string>
    <string name="first_email">Username, mobile number or Email</string>
    <string name="contentDescription">이미지 입니다.</string>
    <string name="first_pw">Password</string>
    <string name="first_login">Login</string>
    <string name="lost_password">비밀번호를 잊으셨나요?</string>
    <string name="create_account">Create Account</string>
    <string name="phone_verification">휴대폰 번호 입력</string>
    <string name="account_phrase">회원님에게 연락할 수 있는 휴대폰 번호를 입력하세요. 이 휴대폰 번호는 프로필에서 다른 사람에게 공개되지 않습니다.</string>
    <string name="phone">Phone</string>
    <string name="account_next">다음</string>
    <string name="account_email">이메일 주소로 가입하기</string>
    <string name="account_isThere">이미 계정이 있으신가요?</string>
    <string name="verification_logo">인증 코드 입력</string>
    <string name="verification_code">인증 코드</string>
    <string name="re_send">인증 코드 재전송</string>
    <string name="profile_pw_logo">비밀번호 만들기</string>
    <string name="profile_pw_phrase">다른 사람이 추측할 수 없는 6자 이상의 문자 또는 숫자로 비밀번호를 만드세요.</string>
    <string name="hint_pw">Password</string>
    <string name="profile_name">사용자 이름 만들기</string>
    <string name="username_phrase">사용하실 사용자 이름을 추가하세요. 언제든지 변경할 수 있습니다.</string>
    <string name="hint_username">Username</string>
    <string name="name_logo">이름 입력</string>
    <string name="signup_image_logo">Onstagram 가입을 축하드립니다!</string>
    <string name="signup_image_phrase">다른 사람에게 보여줄 프로필 이미지를 등록해보세요. \n프로필 이미지는 모든 사람에게 공개됩니다.</string>
    <string name="skip_image">건너뛰기</string>
    <string name="add_image">사진 추가</string>
    <string name="loaded_image_logo">프로필 사진 추가됨</string>
    <string name="loaded_next">완료</string>
    <string name="loaded_change_image">사진 변경</string>
    <string name="signup_email_verification">이메일 주소 입력</string>
    <string name="email_verification_phrase">회원님에게 연락할 수 있는 이메일 주소를 입력하세요. 이 이메일 주소는 회원님의 계정 정보를 찾기 위해 사용 됩니다.</string>
    <string name="signup_email_phone">휴대폰 번호로 가입</string>
    <string name="email">Email</string>
    <string name="setting_lock_sub">계정이 공개 상태인 경우 Onstagram 계정이 없는 사람을 포함해서 Onstagram 안팎의 모든 사람이 프로필과 게시물을 볼 수 있습니다.\n\n 계정이 비공개 상태인 경우 회원님이 승인한 팔로워만 회원님이 공유하는 콘텐츠, 팔로워 및 팔로우 리스트를 불 수 있습니다.</string>
    <string name="logout">로그아웃</string>
</resources>