<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.FirstActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/first_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/contentDescription"
        android:text="@string/app_name"
        android:textSize="90sp"
        android:textColor="@color/black"
        android:fontFamily="@font/logo"/>


    <EditText
        android:id="@+id/first_input_email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/first_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        android:textColor="@color/black"
        android:hint="@string/first_email"
        android:textColorHint="#BFFFFFFF"
        android:background="@drawable/edittext"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:importantForAutofill="no"
        android:paddingStart="12dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/first_input_pw"
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/first_input_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext"
        android:textColorHint="#BFFFFFFF"
        android:hint="@string/first_pw"
        android:paddingStart="12dp"
        tools:ignore="RtlSymmetry"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <Button
        android:id="@+id/first_login"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/first_input_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:text="@string/first_login"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/first_lost_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/first_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/lost_password"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/first_create_account"
        android:layout_width="320dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/create_account"/>

</androidx.constraintlayout.widget.ConstraintLayout>