<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup.CreateAccount"
    android:background="@color/white">

    <ImageView
        android:id="@+id/account_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/contentDescription"/>

    <TextView
        android:id="@+id/account_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_verification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/account_phrase"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_logo"
        android:text="@string/account_phrase"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/account_input_phone"
        android:layout_width="370dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_phrase"
        android:background="@drawable/edittext"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:autofillHints="phone"
        tools:ignore="LabelFor"
        android:padding="8dp"
        android:textColorHint="#BF9D9D9D"
        android:hint="@string/phone"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/account_next"
        android:layout_width="380dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/account_input_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/account_next"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/account_email"
        android:layout_width="380dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/account_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/account_email"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/account_isThere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_isThere"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        android:textSize="16sp"
        android:textColor="#203EE2"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>