<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup.Signup_profile_name"
    android:background="@color/white">

    <ImageView
        android:id="@+id/profile_name_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/contentDescription"/>

    <TextView
        android:id="@+id/profile_name_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/profile_name_phrase"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_logo"
        android:text="@string/username_phrase"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/profile_name_input"
        android:layout_width="370dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_phrase"
        android:background="@drawable/edittext"
        android:layout_marginTop="20dp"
        android:inputType="text"
        tools:ignore="LabelFor"
        android:padding="8dp"
        android:textColorHint="#BF9D9D9D"
        android:hint="@string/hint_username"
        android:textColor="@color/black"
        android:importantForAutofill="no"
        android:maxLines="1"
        android:maxLength="10"/>

    <Button
        android:id="@+id/profile_name_next"
        android:layout_width="380dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/account_next"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/profile_name_isThere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_isThere"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        android:textSize="16sp"
        android:textColor="#203EE2"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>