<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup.Signup_profile_image"
    android:background="@color/white">

    <TextView
        android:id="@+id/signup_image_logo"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:text="@string/signup_image_logo"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/signup_image_phrase"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/signup_image_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/signup_image_phrase"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/unloaded_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_image_phrase"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/signup_image_skip"
        android:layout_width="380dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:text="@string/skip_image"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/unloaded_set_image"
        android:layout_width="380dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@id/signup_image_skip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_image"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/loaded_change_image"
        android:layout_width="380dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:text="@string/loaded_change_image"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/loaded_next"
        android:layout_width="380dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loaded_change_image"
        android:text="@string/loaded_next"
        android:textStyle="bold"
        android:backgroundTint="#00B0FF"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>