<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup.Signup_profile_pw"
    android:background="@color/white">

    <ImageView
        android:id="@+id/profile_pw_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/contentDescription"/>

    <TextView
        android:id="@+id/profile_pw_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_pw_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pw_back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/profile_pw_phrase"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pw_logo"
        android:text="@string/profile_pw_phrase"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_pw_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pw_phrase"
        android:layout_marginTop="10dp"
        app:endIconMode="password_toggle"
        app:passwordToggleTint="@color/black"
        android:inputType="textPassword"
        android:autofillHints="password"
        tools:ignore="LabelFor"
        android:textColorHint="#BFFFFFFF"
        android:hint="@string/hint_pw"
        android:textColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/profile_pw_input"
            android:layout_width="370dp"
            android:layout_height="50dp"
            android:background="@drawable/edittext"
            android:padding="10dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/profile_pw_next"
        android:layout_width="380dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/input_pw_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:text="@string/account_next"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/profile_pw_isThere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_isThere"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="15dp"
        android:textSize="16sp"
        android:textColor="#203EE2"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>