<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup.Verification_phone"
    android:background="@color/white">

    <ImageView
        android:id="@+id/verification_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/contentDescription"/>

    <TextView
        android:id="@+id/verification_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification_back"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/verification_phrase"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verification_logo"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/verification_input"
        android:layout_width="380dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@+id/verification_phrase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext"
        android:padding="8dp"
        android:hint="@string/verification_code"
        android:inputType="phone"
        android:importantForAutofill="no"
        android:textColorHint="#BF9D9D9D"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/verification_next"
        android:layout_width="380dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verification_input"
        android:text="@string/account_next"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/verification_re"
        android:layout_width="380dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verification_next"
        android:text="@string/re_send"
        android:textStyle="bold"/>



</androidx.constraintlayout.widget.ConstraintLayout>