<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/unloaded_logo"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/loaded_image_logo"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unloaded_logo"
        android:src="@drawable/ic_launcher_background"
        android:layout_marginTop="80dp"/>

    <Button
        android:id="@+id/loaded_change_image"
        android:layout_width="380dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        android:text="@string/loaded_change_image"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/loaded_next"
        android:layout_width="380dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/loaded_change_image"
        android:text="@string/loaded_next"
        android:textStyle="bold"
        android:backgroundTint="#00B0FF"/>



</androidx.constraintlayout.widget.ConstraintLayout>